review section completed

--- a/index.html
+++ b/index.html
@@ -387,6 +387,102 @@
   </section>
   <!-- menu section end -->
 
+  <!-- review section -->
+  <section class="review" id="review">
+    <h3 class="sub-heading">customer's review</h3>
+    <h1 class="heading">what they say?</h1>
+
+    <div class="swiper-container review-slider">
+      <div class="swiper-wrapper">
+
+        <div class="swiper-slide slide">
+          <i class="fas fa-quote-right"></i>
+          <div class="user">
+            <img src="./images/pic-1.png" alt="">
+            <div class="user-info">
+              <h3>john doe</h3>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, vel voluptates veniam rem corporis
+            dicta. Explicabo debitis mollitia obcaecati, inventore ipsum ipsa odio voluptate repellat nulla soluta iusto
+            error laborum saepe eius nesciunt autem corporis.</p>
+        </div>
+
+        <div class="swiper-slide slide">
+          <i class="fas fa-quote-right"></i>
+          <div class="user">
+            <img src="./images/pic-2.png" alt="">
+            <div class="user-info">
+              <h3>john doe</h3>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, vel voluptates veniam rem corporis
+            dicta. Explicabo debitis mollitia obcaecati, inventore ipsum ipsa odio voluptate repellat nulla soluta iusto
+            error laborum saepe eius nesciunt autem corporis.</p>
+        </div>
+
+        <div class="swiper-slide slide">
+          <i class="fas fa-quote-right"></i>
+          <div class="user">
+            <img src="./images/pic-3.png" alt="">
+            <div class="user-info">
+              <h3>john doe</h3>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, vel voluptates veniam rem corporis
+            dicta. Explicabo debitis mollitia obcaecati, inventore ipsum ipsa odio voluptate repellat nulla soluta iusto
+            error laborum saepe eius nesciunt autem corporis.</p>
+        </div>
+
+        <div class="swiper-slide slide">
+          <i class="fas fa-quote-right"></i>
+          <div class="user">
+            <img src="./images/pic-4.png" alt="">
+            <div class="user-info">
+              <h3>john doe</h3>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+            </div>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, vel voluptates veniam rem corporis
+            dicta. Explicabo debitis mollitia obcaecati, inventore ipsum ipsa odio voluptate repellat nulla soluta iusto
+            error laborum saepe eius nesciunt autem corporis.</p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- review section end -->
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./script.js"></script>
 </body>
