order section completed

--- a/index.html
+++ b/index.html
@@ -480,7 +480,58 @@
   </section>
   <!-- review section end -->
 
+  <!-- order section -->
+  <section class="order" id="order">
+    <h3 class="sub-heading">order now</h3>
+    <h1 class="heading">free and fast</h1>
 
+    <form action="">
+      <div class="inputBox">
+        <div class="input">
+          <span>your name</span>
+          <input type="text" placeholder="enter your name">
+        </div>
+        <div class="input">
+          <span>your number</span>
+          <input type="text" placeholder="enter your number">
+        </div>
+      </div>
+      <div class="inputBox">
+        <div class="input">
+          <span>your order</span>
+          <input type="text" placeholder="enter food name">
+        </div>
+        <div class="input">
+          <span>additional food</span>
+          <input type="text" placeholder="extra food with">
+        </div>
+      </div>
+      <div class="inputBox">
+        <div class="input">
+          <span>how much</span>
+          <input type="number" placeholder="how many orders">
+        </div>
+        <div class="input">
+          <span>date and time</span>
+          <input type="datetime-local">
+        </div>
+      </div>
+      <div class="inputBox">
+        <div class="input">
+          <span>your address</span>
+          <textarea placeholder="enter your address" cols="30" rows="10"></textarea>
+        </div>
+        <div class="input">
+          <span>your message</span>
+          <textarea placeholder="enter your message" cols="30" rows="10"></textarea>
+        </div>
+      </div>
+
+      <input type="submit" value="order now" class="btn">
+
+    </form>
+  </section>
+  <!-- order section end -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
