--- a/index.html
+++ b/index.html
@@ -533,6 +533,42 @@
   </section>
   <!-- order section end -->
 
+  <!-- footer section -->
+  <section class="footer" id="footer">
+    <div class="box-container">
+      <div class="box">
+        <h3>locations</h3>
+        <a href="#">bangladesh</a><a href="#">japan</a><a href="#china">china</a><a href="#">usa</a><a
+          href="#">thiland</a>
+      </div>
+      <div class="box">
+        <h3>quick links</h3>
+        <a href="#">home</a><a href="#">about</a><a href="#">dishes</a><a href="#">menu</a><a href="#">review</a>
+        <a href="#">order</a>
+      </div>
+      <div class="box">
+        <h3>contact info</h3>
+        <a href="#">+880 1309956223</a>
+        <a href="#">+880 134582344</a>
+        <a href="#">saikat.me@gmail.com</a>
+        <a href="#">saikat.moniruzzaman@gmail.com</a>
+        <a href="#">rangpur, bangladesh - 5520</a>
+      </div>
+      <div class="box">
+        <h3>follow us</h3>
+        <a href="#">facebook</a>
+        <a href="#">twitter</a>
+        <a href="#">instagram</a>
+        <a href="#">linkedin</a>
+        <a href="#">google+</a>
+      </div>
+    </div>
+
+    <div class="credit">copyright @ 2022 by <span>moniruzzaman saikat</span></div>
+
+  </section>
+  <!-- footer section end -->
+
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./script.js"></script>
