--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./style.css">
 
-  <title>Document</title>
+  <title>Restro </title>
 </head>
 
 <body>
   <!-- header section -->
   <header>
-    <a href="#" class="logo"><i class="fas fa-untensils"> </i> Restro</a>
+    <a href="#" class="logo"><i class="fas fa-utensils"></i>resto.</a>
 
     <nav class="navbar">
       <a class="active" href="#home">home</a>
@@ -568,6 +566,11 @@
 
   </section>
   <!-- footer section end -->
+
+  <!-- loader -->
+  <div class="loader-container">
+    <img src="./images/loader.gif" alt="">
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
